# JIT-DEMO

./: CMakeLists.txt  JITStream.h  kjit.h  main.cpp  odc.cpp  work.cpp  workflow.h
cmake/: LLVMConfig.cmake
